// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditModelPageRow it renders 1`] = `
<div
  className="grid-row"
  key="field-rowaddress1"
>
  <div
    className="grid-item--borderless field-label align_right"
    key="headeraddress1"
  >
    Address
  </div>
  <div
    className="grid-item--borderless field-label "
    key="fieldValueDivaddress1"
  >
    <EditModelInput
      componentKey="new"
      field={
        Object {
          "displaySize": 30,
          "error": "At least one line of address must be entered",
          "fieldName": "address1",
          "header": "Address",
          "maxLength": 100,
          "required": true,
          "type": "text",
        }
      }
      index=""
      model={Object {}}
      onChange={[MockFunction]}
      persistedModel={Object {}}
    />
  </div>
</div>
`;

exports[`EditModelPageRow it renders with data 1`] = `
<div
  className="grid-row"
  key="field-rowaddress1"
>
  <div
    className="grid-item--borderless field-label align_right"
    key="headeraddress1"
  >
    Address
  </div>
  <div
    className="grid-item--borderless field-label "
    key="fieldValueDivaddress1"
  >
    <EditModelInput
      brands={
        Array [
          Object {
            "brand_name": "id is 1",
            "id": 1,
          },
          Object {
            "brand_name": "find me",
            "id": 2,
          },
          Object {
            "brand_name": "id is 3",
            "id": 3,
          },
        ]
      }
      componentKey={1}
      field={
        Object {
          "displaySize": 30,
          "error": "At least one line of address must be entered",
          "fieldName": "address1",
          "header": "Address",
          "maxLength": 100,
          "required": true,
          "type": "text",
        }
      }
      index=""
      model={
        Object {
          "address1": "line one",
          "address2": "line Ywo",
          "address3": "line Three",
          "address4": "line Four",
          "customer": 6,
          "id": 123,
          "postcode": "xxxyyy",
        }
      }
      onChange={[MockFunction]}
      persistedModel={
        Object {
          "address1": "line one",
          "address2": "line Ywo",
          "address3": "line Three",
          "address4": "line Four",
          "customer": 6,
          "id": 123,
          "postcode": "xxxyyy",
        }
      }
      sections={
        Array [
          Object {
            "id": 1,
            "partTypes": Array [
              Object {
                "id": 11,
                "name": "id 11",
              },
              Object {
                "id": 21,
                "name": "id 11",
              },
            ],
          },
          Object {
            "id": 2,
            "partTypes": Array [
              Object {
                "id": 2,
                "name": "find me",
              },
              Object {
                "id": 22,
                "name": "id 11",
              },
            ],
          },
        ]
      }
      suppliers={
        Array [
          Object {
            "id": 1,
            "supplier_name": "id is 1",
          },
          Object {
            "id": 2,
            "supplier_name": "find me",
          },
          Object {
            "id": 3,
            "supplier_name": "id is 3",
          },
        ]
      }
    />
  </div>
</div>
`;
